--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,8 @@
 
 html,
 body {
-  max-width: 100vw;
+
+  /* max-width: 100vw; */
   overflow-x: hidden;
 }
 
@@ -25,7 +26,7 @@ body {
 }
 
 * {
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   padding: 0;
   margin: 0;
 }
